--- a/src/components/mystyle.module.css
+++ b/src/components/mystyle.module.css
@@ -1,10 +1,5 @@
 body{
-    position: absolute;
-    width: 100%;
-    height: 1316px;
-    left: 0px;
-
-    background: #F8F8F9;
+    background-color: #F8F8F9;
 }
 .navbar{
     position: absolute;
@@ -424,12 +419,12 @@ body{
     flex-grow: 0;
 }
 ul li::before {
-    content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
-    color: #BF271B; /* Change the color */
-    font-weight: bold; /* If you want it to be bold */
-    display: inline-block; /* Needed to add space between the bullet and the text */ 
-    width: 1em; /* Also needed for space (tweak if needed) */
-    margin-left: -1em; /* Also needed for space (tweak if needed) */
+    content: "\2022";  
+    color: #BF271B; 
+    font-weight: bold; 
+    display: inline-block; 
+    width: 1em; 
+    margin-left: -1em; 
   }
 .list_full_column_1{
     position: absolute;
@@ -654,14 +649,16 @@ ul li::before {
     top: 48px;
 }
 
-.calculator{
+.traker{
     position: absolute;
     width: 1300px;
     height: 630px;
-    left: 70px;
+    /*left: 70px;*/
     top: 611px;
+    display: flex;
+    text-align: center;
 }
-.calculator_button_1_text{
+.traker_button_1_text{
     position: absolute;
     width: 111px;
     height: 46px;
@@ -676,7 +673,7 @@ ul li::before {
 
     color: #000000;
 }
-.calculator_button_2_div{
+.traker_button_2_div{
     position: absolute;
     width: 244px;
     height: 46px;
@@ -685,7 +682,7 @@ ul li::before {
     text-align: left;
 }
 
-.calculator_button_2_text{
+.traker_button_2_text{
     position: absolute;
     width: 244px;
     height: 46px;
@@ -702,7 +699,7 @@ ul li::before {
 }
 
 
-.calculator_frame{
+.traker_frame{
     position: absolute;
     width: 1300px;
     height: 560px;
@@ -712,14 +709,14 @@ ul li::before {
     background: #FFFFFF;
     border-radius: 0px 20px 20px 20px;
 }
-.calculator_forms{
+.traker_forms{
     position: absolute;
     width: 470px;
     height: 499px;
     left: 38px;
     top: 20px;
 }
-.calculator_simple_text{
+.traker_simple_text{
     position: absolute;
     width: 470px;
     height: 121px;
@@ -737,7 +734,7 @@ ul li::before {
 
     color: #000000;
 }
-.calculator_pic{
+.traker_pic{
     position: absolute;
     width: 732px;
     height: 560px;
@@ -745,7 +742,7 @@ ul li::before {
     top: 0px;
 }
 
-.calculator_simple_inputs{
+.traker_simple_inputs{
     position: absolute;
     width: 470px;
     height: 144px;
@@ -912,7 +909,7 @@ ul li::before {
     border-radius: 8px; 
     padding-left:17px;
 }
-.calc_btn_title{
+.traker_btn_title{
     position: absolute;
     width: 214px;
     height: 17px;
@@ -930,7 +927,7 @@ ul li::before {
 
     color: #000000;
 }
-.calc_btn_find{
+.traker_btn_find{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -966,17 +963,232 @@ ul li::before {
     flex-grow: 0;
 }
 
-.calc_btn_find:hover{
+.traker_btn_find:hover{
     border: 1px solid #BF271B;
     border-radius: 8px;
     background-color: #FFFFFF;
     color:#000000;
 }
 
+.package_text{
+    position: absolute;
+    width: 470px;
+    height: 93px;
+    left: 0px;
+    top: 30px;
+
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 120%;
+    /* or 17px */
+
+    font-feature-settings: 'pnum' on, 'lnum' on;
+
+    color: #000000;
+}
+.package_download{
+    position: absolute;
+    width: 520px;
+    height: 103px;
+    left: 0px;
+    top: 156px;
+
+}
+.package_download_pic{
+    position: absolute;
+    width: 41px;
+    height: 41px;
+    left: 0px;
+    top: 0px;
+}
+.package_download_text{
+    position: absolute;
+    width: 428px;
+    height: 38px;
+    left:57px;
+
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 120%;
+    /* or 19px */
+
+    text-decoration-line: underline;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+
+    color: #000000;
+
+
+    /* Inside auto layout */
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
+.package_download_text_bottom{
+    position: absolute;
+    width: 428px;
+    height: 17px;
+    top:42px;
+    left:55px;
+
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 120%;
+    /* identical to box height, or 17px */
+
+    font-feature-settings: 'pnum' on, 'lnum' on;
+
+    color: #707070;
+
+
+    /* Inside auto layout */
+
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+}
+.package_download_text_info{
+    position: absolute;
+    width: 470px;
+    height: 34px;
+    left: 0px;
+    top: 69px;
+
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 120%;
+    /* or 17px */
+
+    font-feature-settings: 'pnum' on, 'lnum' on;
+
+    color: #000000;
+}
+.package_add{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 16px;
+
+    position: absolute;
+    width: 470px;
+    height: 41px;
+    left: 0px;
+    top: 355px;
+}
+
+.package_add_pic{
+    width: 41px;
+    height: 41px;
+
+
+    /* Inside auto layout */
+
+    position: absolute;
+}
+
+.package_add_text{
+    position: absolute;
+    width: 428px;
+    height: 38px;
+    left:57px;
+
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 120%;
+    /* or 19px */
+
+    text-decoration-line: underline;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+
+    color: #000000;
+
+
+    /* Inside auto layout */
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
+.package_add_text_bottom{
+    position: absolute;
+    width: 428px;
+    height: 17px;
+    top:23px;
+    left:55px;
+
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 120%;
+    /* identical to box height, or 17px */
+
+    font-feature-settings: 'pnum' on, 'lnum' on;
+
+    color: #707070;
+
+
+    /* Inside auto layout */
+
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+}
+.package_add_text_info{
+    width: 428px;
+    height: 17px;
+
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 120%;
+    /* identical to box height, or 17px */
+
+    font-feature-settings: 'pnum' on, 'lnum' on;
+
+    color: #707070;
+
+
+    /* Inside auto layout */
+
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+}
+.package_comment{
+    position: absolute;
+    width: 470px;
+    height: 17px;
+    left: 0px;
+    top: 428px;
+
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 120%;
+    /* identical to box height, or 17px */
+
+    font-feature-settings: 'pnum' on, 'lnum' on;
+
+    color: #000000;
+}
 .scroll{
     position: absolute;
-    width: 100%;
-    height: 570px;
+    width: 1440px;
+    height: 510px;
     left: 0px;
     top: 1436px;
     background-color: #FFFFFF;
@@ -1231,11 +1443,13 @@ flex-grow: 0;
     z-index: 9999;
     transform: rotate(180deg);
 }
+
 .scroll_banner_3{
     position:relative;
     width: 1080px;
     height: 514px;
     display: flex;
+    overflow-x: scroll;
     left: 140px;
 }
 .scroll_banner_3_frame{
@@ -1256,13 +1470,13 @@ flex-grow: 0;
     gap: 12px;
 
     position: absolute;
-    width: 423px;
+    width: 453px;
     height: 130px;
     left: 45px;
     top: 50px;
 }
 .scroll_banner_3_title{
-    width: 423px;
+    width: 453px;
     height: 52px;
 
     font-family: 'Raleway';
@@ -1321,9 +1535,203 @@ flex-grow: 0;
 .scroll_banner_3_img{
     position: absolute;
     width: 440px;
-    height: 609px;
+    height: 514px;
     left: 589px;
     top: 0px;
     z-index: 9999;
     transform: rotate(180deg);
+}
+.info{
+    position: absolute;
+    background-color: #FFFFFF;
+    width: 1440px;
+    height: 581px;
+    top: 2106px;
+    display: flex;
+    justify-content: center;
+}
+.info_frame{
+    position: absolute;
+    width: 1202px;
+    height: 457px;
+    top: 124px;
+    
+}
+.info_title{
+    position: absolute;
+    width: 568px;
+    height: 56px;
+    left: 70px;
+    top: 0px;
+
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+
+    color: #000000;
+}
+
+.info_column_1{
+    position: absolute;
+    width: 310px;
+    height: 281px;
+    left: 88px;
+    top:90px;
+
+}
+.info_column_list_1{
+    position: absolute;
+    width: 292px;
+    height: 281px;
+    left: 0px;
+    top: 0px;
+
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+
+    color: #000000;
+
+}
+.info_column_list_2{
+    position: absolute;
+    width: 283px;
+    height: 281px;
+    left: 320px;
+    top: 0px;
+
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+
+    color: #000000;
+}
+.info_column_1_btn{
+
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 203px;
+    height: 46px;
+    left: -20px;
+    top: 255px;
+
+    border: 1px solid #BF271B;
+    border-radius: 8px;
+
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 120%;
+    /* identical to box height, or 17px */
+
+    font-feature-settings: 'pnum' on, 'lnum' on;
+
+    color: #000000;
+}
+.info_column_1_btn:hover{
+    background: #BF271B;
+    border-radius: 8px;
+    color:#FFFFFF;
+}
+.info_column_2{
+    position: absolute;
+    width: 536px;
+    height: 361px;
+    left: 661px;
+    top: 90px;
+}
+.info_column_2_text{
+    position: absolute;
+    width: 536px;
+    height: 88px;
+    left: 0px;
+    top: 0px;
+
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 140%;
+    /* or 22px */
+
+    font-feature-settings: 'pnum' on, 'lnum' on;
+
+    color: #000000;
+}
+.info_column_2_list_not_available{
+    position: absolute;
+    width: 529px;
+    height: 250px;
+    left: 0px;
+    top: 108px;
+
+    background: #F8F8F9;
+    border-radius: 20px;
+}
+.info_column_2_list_not_available_title_and_text{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 12px;
+
+    position: absolute;
+    width: 438px;
+    height: 120px;
+    left: 34px;
+    top: 46px;
+
+}
+.info_column_2_list_not_available_title{
+    width: 288px;
+    height: 28px;
+
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+
+    color: #BF271B;
+
+
+    /* Inside auto layout */
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
+.info_column_2_list_not_available_text{
+    width: 438px;
+    height: 80px;
+
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 140%;
+    /* or 20px */
+
+    font-feature-settings: 'pnum' on, 'lnum' on;
+
+    color: #000000;
+
+
+    /* Inside auto layout */
+
+    flex: none;
+    order: 1;
+    flex-grow: 0;
 }
